methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(step count: Int, goForward: Boolean){
^MethodsArgs:2: error: not found: value step
move(step count: Int, goForward: Boolean){
     ^MethodsArgs:2: error: not found: value goForward
move(step count: Int, goForward: Boolean){
                      ^MethodsArgs:3: error: not found: value goForward
  if(goForward){
     ^MethodsArgs:4: error: not found: value step
    for(i<-1 to step count){
                ^MethodsArgs:8: error: not found: value step
    for(j<-1 to step count){
                ^