methods.args.MethodsArgs.scala.code
move(step count: Int, goForward: Boolean){
  if(goForward){
    for(i<-1 to step count){
      forward();
    }
  }else{
    for(j<-1 to step count){
      backward();
    }
  }
} 
